# DesafioEstanteMagica

./: .env.example  LICENSE  README.md  docker-compose.yaml  pyproject.toml
app/: main.py
app/db/: connection.py  models.py
app/migrations/versions/: 014790f4145a_changed_image_table_columns.py  342b375a37ae_fixed_relationship_in_book_model_again.py  71ca8eb9da33_added_column_teacher_in_books.py  75033f740793_added_column_teacher_in_books.py  82d921c3d474_created_tables.py  e17992ec6d7d_fixed_relationship_in_book_model.py
app/routes/: book_routes.py  image_routes.py  text_routes.py
app/schemas/: base.py  book.py  image.py  text.py
app/service/: book.py  image.py  text.py
app/test/: conftest.py
app/test/routes/: test_book_routes.py  test_image_routes.py  test_text_routes.py
app/test/schemas/: test_book_schema.py  test_image_schema.py  test_text_schema.py
app/test/service/: test_book_service.py  test_image_service.py  test_text_service.py
docs/: [PT-BR] Testes pelo Insomnia.txt
